syntax = "proto3";

package account;

service AccountService {
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse) {
  }

  rpc GetAccount(GetAccountRequest) returns (Account) {
  }

  rpc CreateAccount(CreateAccountRequest) returns (Account) {
  }

  rpc UpdateAccount(UpdateAccountRequest) returns (Account) {
  }

  rpc DeleteAccount(DeleteAccountRequest) returns (Account) {
  }
}

message Account {
  string id = 1;
  string displayName = 2;
  string email = 3;
  string organization = 4;
}

message ListAccountsRequest {
  optional int32 page_size = 1;
}

message ListAccountsResponse {
  repeated Account accounts = 1;
}

message GetAccountRequest {
  string id = 1;
}

message CreateAccountRequest {
  string id = 1;
  string displayName = 2;
  string email = 3;
  string organization = 4;
}

message UpdateAccountRequest {
  string id = 1;
  optional string displayName = 2;
  optional string email = 3;
  optional string organization = 4;
}

message DeleteAccountRequest {
  string id = 1;
}
