syntax = "proto3";

package authentication;

service AuthenticationService {
  rpc RegisterAccount(RegisterAccountRequest) returns (Authentication) {}
  rpc LoginAccount(LoginAccountRequest) returns (LoginAccountResponse) {}
  rpc ValidateAccount(ValidateAccountRequest) returns (Account) {}
}

message Authentication {
  string displayName = 1;
  string email = 2;
  string organization = 3;
  string password = 4;
}

message Account {
  string id = 1;
  string displayName = 2;
  string email = 3;
  string organization = 4;
  string password = 5;
}

message RegisterAccountRequest {
  string displayName = 1;
  string email = 2;
  string organization = 3;
  string password = 4;
}

// message RegisterAccountResponse {
// }

message LoginAccountRequest {
  string id = 1;
  string email = 2;
  string displayName = 3;
}

message LoginAccountResponse {
  string access_token = 1;
}

message ValidateAccountRequest {
  string email = 1;
  string password = 2;
}

// message ValidateAccountResponse {
// }
